# champsim_neuralNets

./: README.md
Champsim/: champsim_config_nn-champsim.json
Champsim/prefetcher/nn-champsim/: nn-champsim.cc
nn/: neural_net.cpp
nn-offline/: CMakeLists-nnnnnn.txt  CMakeLists-ogogog.txt  CMakeLists.txt  champsim_config_exapp.json  example-app-copy.cpp  main.cpp  model.pt  nn-offline.cpp  params.pt
nn-offline/libtorch/: build-version
nn/include/: neural_net.h
